syntax = "proto3";

import "chain.proto";

message CallReq {
  repeated bytes tx_hashes = 1;
  BlockHeader header = 2;
}

message CallRes {
  repeated Receipt receipts = 1;
  bytes state_root = 2;
}

message StaticCallReq {
  uint64 height = 1;
  bytes from = 2;
  bytes to = 3;
  bytes data = 4;
}

message StaticCallRes {
  bytes result = 1;
  string error = 2;
}

service VM {
  rpc Call(CallReq) returns (CallRes) {}
  rpc StaticCall(StaticCallReq) returns (StaticCallRes) {}
}
